# toy-matching-engine

./: Cargo.toml  README.md  docker-compose.yml
api-service/: Cargo.toml
api-service/src/: config.rs  http.rs  main.rs  ws.rs
matching-engine/: Cargo.toml  Dockerfile
matching-engine/migrations/: 0001_init.sql  0002_idempotency_and_order_id_seq.sql
matching-engine/src/: config.rs  engine.rs  lib.rs  main.rs  persistence.rs  wal.rs
matching-engine/tests/: integration.rs
shared/: Cargo.toml
shared/src/: kafka.rs  models.rs
