[workspace]
members = ["shared", "api-service", "matching-engine"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
actix = "0.13.5"
actix-ws = "0.3.0"
actix-web = "4.11.0"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
rdkafka = { version = "0.36.2", default-features = false, features = ["tokio", "cmake-build", "curl-static"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4"] }
