[package]
name = "api-service"
version.workspace = true
edition.workspace = true

[dependencies]
actix-ws.workspace = true
actix-web.workspace = true
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
shared = { path = "../shared" }
