[package]
name = "matching-engine"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared = { path = "../shared" }

[dev-dependencies]
anyhow.workspace = true
